tests/legacy/snapshots/apply_print__snapshot_prints_output__clean_up_default_reports_summary.snap
---
source: tests/apply_print.rs
expression: captured
---
deployed 0, replaced 1, skipped 0, removed 1, pruned 0
