tests/legacy/snapshots/apply_print__snapshot_prints_output__clean_up_verbose_reports_removed_and_summary.snap
---
source: tests/apply_print.rs
expression: captured
---
replaced <root>/target/keep.txt
removed <root>/target/remove.txt
deployed 0, replaced 1, skipped 0, removed 1, pruned 0
