tests/legacy/snapshots/apply_print__snapshot_prints_output__fresh_verbose_prints_per_path_and_summary.snap
---
source: tests/apply_print.rs
expression: captured
---
deployed <root>/target/a.txt
deployed <root>/target/b.txt
deployed 2, replaced 0, skipped 0
