tests/legacy/snapshots/apply_print__snapshot_prints_output__prune_default_reports_summary.snap
---
source: tests/apply_print.rs
expression: captured
---
deployed 0, replaced 0, skipped 0, removed 1, pruned 2
